src/scss/_base.scss
// ============================================================================
// Global Styles
// ============================================================================

/* Mixins */
@import './mixins';

/* Fonts */
@import './fonts';

/* Landing Styles */
@import './components/landing/landing';

/* Team Styles */
@import './components/team/team';

html,
body {
  width: 100vw;
  height: 100%;
  margin: 0;
  padding: 0;
  overscroll-behavior: none;
}

.app-root {
  display: block;
  max-width: 100%;
}

#mlh-trust-badge {
  margin-top: -1px;
  @include respond(phone-narrow) {
    visibility: hidden;
  }
}

